--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react-responsive": "^8.0.5",
     "@types/styled-components": "^5.1.22",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-responsive": "^9.0.0-beta.6",
     "styled-components": "^5.3.3",
     "styled-reset": "^4.3.4",
     "swiper": "^8.0.3"
