--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@types/react-responsive": "^8.0.5",
     "@types/styled-components": "^5.1.22",
+    "dotenv-webpack": "^7.1.0",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
