--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.2",
     "@types/react-responsive": "^8.0.5",
     "@types/styled-components": "^5.1.22",
     "dotenv-webpack": "^7.1.0",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-popper": "^2.2.5",
     "react-responsive": "^9.0.0-beta.6",
     "styled-components": "^5.3.3",
     "styled-reset": "^4.3.4",
