--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@types/node": "17.0.15",
     "@types/react": "17.0.39",
+    "@types/react-dom": "^17.0.12",
     "axios": "^0.25.0",
     "babel-plugin-styled-components": "^2.0.2",
     "eslint": "8.8.0",
